libs/parser/testdata/errors/at_missing_path.csl
# Test rejection of @ without path
host: @configs
